crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__dead_recursive__unused_delayed_worker.snap
---
source: crates/nash-codegen/src/optimizer_tests/dead_recursive.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
letrec
  worker#1 : @delay int [static []] = \ -> delay (case@Bool true of
    True -> 42
    False -> force worker#1)
in
7
--- core after
7
--- uplc before
(program 1.1.0
  [(lam worker_1 (con integer 7))
    [(lam self_2 [self_2 self_2])
      (lam self_2
        (delay (case (con bool True) (force [self_2 self_2]) (con integer 42))))]])
--- uplc after
(program 1.1.0 (con integer 7))
--- result
(con integer 7)
--- logs
[]
